concord_macros/tests/v5/dsl/fail/fail_old_endpoint_outer_block.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client OldEndpointOuterBlockApi { base https "example.com" }

    GET Broken {
        path ["broken"]
        -> Json<String>
    }
}

fn main() {}
